# trading

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
api/: .dockerignore  .gitignore  Dockerfile  cron.Dockerfile  crontab  notsosecrets.env  pyproject.toml
api/api/: admin.py  exceptions.py  models.py  serializers.py  services.py  settings.py  tests.py  urls.py  views.py
api/api/management/commands/: batch_order.py
api/api/migrations/: 0001_add_stock_model.py  0002_order.py
api/api/tests/: test_models.py  test_views.py
