[tool.poetry]
name = "trading"
version = "0.1.0"
description = ""
authors = ["Renzo Gabriel Bongocan <gabrielbongocan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.1"
psycopg = "^3.2.2"
djangorestframework = "^3.15.2"
markdown = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
