[tool.poetry]
name = "trading"
version = "0.1.0"
description = ""
authors = ["Renzo Gabriel Bongocan <gabrielbongocan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.1.1"
djangorestframework = "^3.15.2"
markdown = "^3.7"
psycopg2-binary = "^2.9.9"
isort = "^5.13.2"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
